# PocoSoapCpp

./: README.md
PocoApi/: CMakeCache.txt  CMakeLists.txt
PocoApi/src/: main.cpp
PocoApi/src/handlers/: PostHandler.cpp  PostHandler.hpp
helloWorld/: CMakeLists.txt
helloWorld/src/: CMakeLists.txt  NameService.cpp  NameService.hpp  main.cpp
